force-app/main/default/objects/Revenue_Commission__c/Revenue_Commission__c.object-meta.xml
<CustomObject>
    <label>Revenue Commission</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Commission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>