force-app/main/default/objects/Revenue_Commission__c/fields/Group_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Group_Revenue__c</fullName>
    <label>Group Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>