force-app/main/default/objects/Revenue_Commission__c/fields/Individual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_Revenue__c</fullName>
    <label>Individual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>